optimise code a lot. remove unnecessary api calls. fix security issues by upgrading packages. change format of /latest command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,9 @@
         "outDir": "./dist",
         "allowJs": true,
         "target": "ESNext",
-        "moduleResolution": "nodenext",
-        "module": "EsNext",
-        "noFallthroughCasesInSwitch": true,
+        "moduleResolution": "NodeNext",
+        "module": "NodeNext",
+        "noFallthroughCasesInSwitch": true
     },
-    "include": [
-        "./src/**/*"
-    ]
+    "include": ["./src/**/*"]
 }
