--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.7.1",
+    "axios": "^1.6.7",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.0.3",
     "mongodb": "^5.2.0",
     "xml2js": "^0.5.0"
@@ -22,7 +23,9 @@
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
     "eslint-config-eslint": "^7.0.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
   "type": "module"
